gopls/mcpbridge/test/testdata/projects/error/file1.go

package main

func Func1() {}
